Edit CardView, add edit Item Button

--- a/BookExchange/app/src/main/AndroidManifest.xml
+++ b/BookExchange/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BookExchange">
         <activity
+            android:name=".UI.home.ItemSettingsActivity"
+            android:exported="false" />
+        <activity
             android:name=".UI.home.ItemActivity"
             android:exported="false" />
         <activity
